Configure for deploying Done